<resources>
    <string name="app_name">"Budget Manager"</string>
    <string name="action_settings">Settings</string>
    <string name="action_alarm">Alarm</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="despense">Depense</string>
    <string name="budget">Budget</string>
    <string name="title_activity_budget">BudgetActivity</string>
    <string name="title_activity_depense">DepenseActivity</string>
    <string name="add">
        add
    </string>

        <string name="voyage">
        Voyage
    </string>    <string name="shoping">
        Achat
    </string>    <string name="other">
        Autre
    </string>    <string name="eduction">
        Education
    </string>    <string name="food">
        Restoration
    </string>    <string name="carmotor">
        car/motor
    </string>
    <string name="montant">Montant</string>
    <string name="categorie">Categorie</string>
    <string name="note">Note</string>
    <string name="date">Date</string>
    <string name="frequence">Périodicité</string>
    <string name="valider">VALIDER</string>
    <string-array name="arrayfrequences">
        <item>Une fois seulement</item>
        <item>Chaque Jour</item>
        <item>Chaque Semaine</item>
        <item>Chaque mois</item>
    </string-array>
    <string-array name="arrayCategoris">
        <item>Voyage</item>
        <item>Achat</item>
        <item>Education</item>
        <item>Restoration</item>
        <item>Auto/Motor</item>
        <item>Autre</item>
    </string-array>
    <string name="today">Aujourd\'hui</string>
    <string name="transport">Transport</string>
    <string name="resume">Vue d\'ensemble</string>
    <string name="ajuster_budget">Ajuster budget</string>
    <string name="ajouter_depense">Ajouter dépense</string>
    <string name="franc">Francs</string>
    <string name="zero">0</string>
    <string name="montant_erreur">Veuillez saisir un montant</string>
    <string name="salary">Salaire</string>
    <string name="gift">Cadeau</string>
    <string name="selling">Vente</string>
    <string name="award">Recompense</string>
    <string name="reminder_text">Rappel d\'une transaction d\'un montant de %1$s ajoutée le %2$s</string>
    <string name="future_months">Mois Futures</string>
    <string name="this_month">Ce mois-ci</string>
    <string name="last_month">Mois dernier</string>
    <string name="every_day">Chaque jour</string>
    <string name="once">Une fois seulement</string>
    <string name="every_week">Chaque semaine</string>
    <string name="every_month">Chaque mois</string>
    <string name="question_add">Que voudriez vous ajouter ?</string>

    <string name="title_activity_start">StartActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="supprimer">Supprimer</string>
</resources>
