<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.ly.badiane.budgetmanager_finalandroidproject.MainActivity">
    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_settings_applications_black_24dp"
        android:orderInCategory="300"
        android:title="@string/action_settings"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_alarm"
        android:icon="@drawable/ic_alarm_add_black_24dp"
        android:orderInCategory="200"
        android:title="@string/action_alarm"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/add"
        android:icon="@drawable/ic_add_box_black_24dp"
        android:orderInCategory="100"
        android:title="@string/action_alarm"
        app:showAsAction="ifRoom" >
        <menu>
            <item
                android:id="@+id/budget"

                android:orderInCategory="100"
                android:title="@string/budget"
                app:showAsAction="never" />
            <item
                android:id="@+id/depenses"

                android:orderInCategory="100"
                android:title="@string/despenses"
                app:showAsAction="never" />
        </menu>
        </item>

</menu>
