<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorAccent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/txt_dia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:text="@string/question_add"
        android:textColor="@android:color/white"
        android:textSize="15dp"
        android:textStyle="bold" />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="#3E80B4"
        android:orientation="horizontal">

        <Button
            android:id="@+id/dialog_bnt_budget"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:background="@android:color/white"
            android:clickable="true"
            android:text="@string/budget"
            android:textColor="@color/BLACK"
            android:textStyle="bold" />

        <Button
            android:id="@+id/dialog_bnt_depense"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_marginLeft="5dp"
            android:background="@android:color/white"
            android:clickable="true"
            android:text="@string/despense"
            android:textColor="@color/BLACK"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>